<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>ch.post.it.evoting.cryptoprimitives.domain</groupId>
	<artifactId>crypto-primitives-domain</artifactId>
	<version>0.14.3.3-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>Crypto Primitives Domain</name>

	<properties>
		<maven-enforcer-plugin.requiredJavaVersion>[17.0.3]</maven-enforcer-plugin.requiredJavaVersion>
		<maven-enforcer-plugin.requiredMavenVersion>3.8.5</maven-enforcer-plugin.requiredMavenVersion>
		<project.build.outputTimestamp>2022-06-14T08:43:01+02:00</project.build.outputTimestamp>

		<bouncycastle.version>1.71</bouncycastle.version>
		<crypto-primitives.version>0.14.3.1</crypto-primitives.version>
		<jackson.version>2.13.3</jackson.version>
		<jacoco.version>0.8.8</jacoco.version>
		<junit-jupiter.version>5.9.0-M1</junit-jupiter.version>
		<mockito.version>4.6.0</mockito.version>

		<maven.compiler.release>17</maven.compiler.release>

		<!-- Sonar -->
		<sonar.scm.disabled>true</sonar.scm.disabled>
		<sonar.host.url>https://sonar.tools.pnet.ch</sonar.host.url>
		<sonar.projectKey>ch.post.it.evoting.cryptoprimitives.domain:crypto-primitives-domain</sonar.projectKey>
		<sonar.skipDesign>true</sonar.skipDesign>
		<sonar.junit.reportPaths>${project.basedir}/target/surefire-reports/</sonar.junit.reportPaths>
		<sonar.coverage.exclusions>**/test/**/*,**/tests/**/*</sonar.coverage.exclusions>
		<sonar.java.source>${maven.compiler.release}</sonar.java.source>
		<sonar.java.target>${maven.compiler.release}</sonar.java.target>
		<sonar-maven-plugin.version>3.9.0.2155</sonar-maven-plugin.version>

		<!-- Plugins versions -->
		<maven-deploy-plugin.version>3.0.0-M2</maven-deploy-plugin.version>
		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
		<maven-enforcer-plugin.version>3.0.0</maven-enforcer-plugin.version>
		<maven-failsafe-plugin.version>3.0.0-M6</maven-failsafe-plugin.version>
		<maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M6</maven-surefire-plugin.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>ch.post.it.evoting.cryptoprimitives</groupId>
				<artifactId>crypto-primitives</artifactId>
				<version>${crypto-primitives.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.post.it.evoting.cryptoprimitives</groupId>
				<artifactId>crypto-primitives</artifactId>
				<version>${crypto-primitives.version}</version>
				<classifier>tests</classifier>
				<type>test-jar</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcpkix-jdk18on</artifactId>
				<version>${bouncycastle.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson</groupId>
				<artifactId>jackson-bom</artifactId>
				<version>${jackson.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit-jupiter.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-inline</artifactId>
				<version>${mockito.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>${junit-jupiter.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- Internal dependencies -->
		<dependency>
			<groupId>ch.post.it.evoting.cryptoprimitives</groupId>
			<artifactId>crypto-primitives</artifactId>
		</dependency>

		<!-- External dependencies -->
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcpkix-jdk18on</artifactId>
		</dependency>
		<!-- com.fasterxml.jackson -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-annotations</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-csv</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>

		<!-- Testing dependencies -->
		<dependency>
			<groupId>ch.post.it.evoting.cryptoprimitives</groupId>
			<artifactId>crypto-primitives</artifactId>
			<classifier>tests</classifier>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${maven.compiler.release}</source>
					<target>${maven.compiler.release}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<environmentVariables>
						<SECURITY_LEVEL>TESTING_ONLY</SECURITY_LEVEL>
					</environmentVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven-deploy-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${maven-enforcer-plugin.version}</version>
				<executions>
					<execution>
						<id>enforce</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<banDuplicatePomDependencyVersions/>
								<requireJavaVersion>
									<version>${maven-enforcer-plugin.requiredJavaVersion}</version>
								</requireJavaVersion>
								<requireMavenVersion>
									<version>${maven-enforcer-plugin.requiredMavenVersion}</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
